--- a/output/authors.html
+++ b/output/authors.html
@@ -16,20 +16,18 @@
         <meta property="og:site_name" content="Chris Degiere's Data Science Blog" />
         <meta property="og:type" content="website"/>
         <meta property="og:title" content="Chris Degiere's Data Science Blog"/>
-        <meta property="og:url" content="."/>
+        <meta property="og:url" content=""/>
         <meta property="og:description" content="Chris Degiere's Data Science Blog"/>
 
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="./theme/css/bootstrap.flatly.min.css" type="text/css"/>
-    <link href="./theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="/theme/css/bootstrap.flatly.min.css" type="text/css"/>
+    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="./theme/css/pygments/default.css" rel="stylesheet">
-    <link rel="stylesheet" href="./theme/css/style.css" type="text/css"/>
+    <link href="/theme/css/pygments/default.css" rel="stylesheet">
+    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
 
-        <link href="./feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
-              title="Chris Degiere's Data Science Blog ATOM Feed"/>
 
 
 </head>
@@ -44,19 +42,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="./" class="navbar-brand">
+            <a href="/" class="navbar-brand">
 Chris Degiere's Data Science Blog            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                         <li><a href="./pages/about.html">
+                         <li><a href="/pages/about.html">
                              About
                           </a></li>
-                         <li><a href="./pages/contact.html">
+                         <li><a href="/pages/contact.html">
                              Contact
                           </a></li>
                         <li >
-                            <a href="./category/articles.html">Articles</a>
+                            <a href="/category/articles.html">Articles</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -74,7 +72,7 @@ Chris Degiere's Data Science Blog            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on Chris Degiere's Data Science Blog</h1>
-        <li><a href="./author/chris-degiere.html">Chris Degiere</a> (8)</li>
+        <li><a href="/author/chris-degiere.html">Chris Degiere</a> (8)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
@@ -94,25 +92,25 @@ Chris Degiere's Data Science Blog            </a>
 
 <!-- Sidebar/Tag Cloud -->
 <li class="list-group-item">
-  <a href="./"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
+  <a href="/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
   <ul class="list-group " id="tags">
     <li class="list-group-item tag-1">
-      <a href="./tag/data-science.html">data science</a>
+      <a href="/tag/data-science.html">data science</a>
     </li>
     <li class="list-group-item tag-1">
-      <a href="./tag/visualization.html">visualization</a>
+      <a href="/tag/visualization.html">visualization</a>
     </li>
     <li class="list-group-item tag-2">
-      <a href="./tag/python.html">python</a>
+      <a href="/tag/matplotlib.html">matplotlib</a>
     </li>
     <li class="list-group-item tag-2">
-      <a href="./tag/cryptocurrency.html">cryptocurrency</a>
+      <a href="/tag/cryptocurrency.html">cryptocurrency</a>
     </li>
     <li class="list-group-item tag-2">
-      <a href="./tag/matplotlib.html">matplotlib</a>
+      <a href="/tag/python.html">python</a>
     </li>
     <li class="list-group-item tag-4">
-      <a href="./tag/pelican.html">pelican</a>
+      <a href="/tag/pelican.html">pelican</a>
     </li>
   </ul>
 </li>
@@ -154,13 +152,13 @@ Chris Degiere's Data Science Blog            </a>
       </div>
    </div>
 </footer>
-<script src="./theme/js/jquery.min.js"></script>
+<script src="/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="./theme/js/bootstrap.min.js"></script>
+<script src="/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="./theme/js/respond.min.js"></script>
+<script src="/theme/js/respond.min.js"></script>
 
 
 
