--- a/output/hello-world.html
+++ b/output/hello-world.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="./hello-world.html">
+<link rel="canonical" href="/hello-world.html">
 
         <meta name="author" content="Chris Degiere" />
         <meta name="keywords" content="python" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="Chris Degiere's Data Science Blog" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Hello World!"/>
-        <meta property="og:url" content="./hello-world.html"/>
+        <meta property="og:url" content="/hello-world.html"/>
         <meta property="og:description" content="Here&#39;s some basic python code to test pelican themes and code styling: # a comment def say_hello(name): print(f&#39;Hello {name}!&#39;) if __name__ == &#34;__main__&#34;: say_hello(&#39;Chris&#39;)"/>
         <meta property="article:published_time" content="2019-07-23" />
             <meta property="article:section" content="Articles" />
@@ -28,17 +28,14 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="./theme/css/bootstrap.flatly.min.css" type="text/css"/>
-    <link href="./theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="/theme/css/bootstrap.flatly.min.css" type="text/css"/>
+    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="./theme/css/pygments/default.css" rel="stylesheet">
-    <link rel="stylesheet" href="./theme/css/style.css" type="text/css"/>
+    <link href="/theme/css/pygments/default.css" rel="stylesheet">
+    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
 
-        <link href="./feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
-              title="Chris Degiere's Data Science Blog ATOM Feed"/>
 
-        <link href="./feeds/articles.atom.xml" type="application/atom+xml" rel="alternate"
-              title="Chris Degiere's Data Science Blog Articles ATOM Feed"/>
+
 </head>
 <body>
 
@@ -51,19 +48,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="./" class="navbar-brand">
+            <a href="/" class="navbar-brand">
 Chris Degiere's Data Science Blog            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                         <li><a href="./pages/about.html">
+                         <li><a href="/pages/about.html">
                              About
                           </a></li>
-                         <li><a href="./pages/contact.html">
+                         <li><a href="/pages/contact.html">
                              Contact
                           </a></li>
                         <li class="active">
-                            <a href="./category/articles.html">Articles</a>
+                            <a href="/category/articles.html">Articles</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -84,7 +81,7 @@ Chris Degiere's Data Science Blog            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="./hello-world.html"
+                    <a href="/hello-world.html"
                        rel="bookmark"
                        title="Permalink to Hello World!">
                         Hello World!
@@ -105,7 +102,7 @@ Chris Degiere's Data Science Blog            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="./tag/python.html">python</a>
+	<a href="/tag/python.html">python</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -141,25 +138,25 @@ Chris Degiere's Data Science Blog            </a>
 
 <!-- Sidebar/Tag Cloud -->
 <li class="list-group-item">
-  <a href="./"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
+  <a href="/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
   <ul class="list-group " id="tags">
     <li class="list-group-item tag-1">
-      <a href="./tag/data-science.html">data science</a>
+      <a href="/tag/data-science.html">data science</a>
     </li>
     <li class="list-group-item tag-1">
-      <a href="./tag/visualization.html">visualization</a>
+      <a href="/tag/visualization.html">visualization</a>
     </li>
     <li class="list-group-item tag-2">
-      <a href="./tag/python.html">python</a>
+      <a href="/tag/matplotlib.html">matplotlib</a>
     </li>
     <li class="list-group-item tag-2">
-      <a href="./tag/cryptocurrency.html">cryptocurrency</a>
+      <a href="/tag/cryptocurrency.html">cryptocurrency</a>
     </li>
     <li class="list-group-item tag-2">
-      <a href="./tag/matplotlib.html">matplotlib</a>
+      <a href="/tag/python.html">python</a>
     </li>
     <li class="list-group-item tag-4">
-      <a href="./tag/pelican.html">pelican</a>
+      <a href="/tag/pelican.html">pelican</a>
     </li>
   </ul>
 </li>
@@ -201,13 +198,13 @@ Chris Degiere's Data Science Blog            </a>
       </div>
    </div>
 </footer>
-<script src="./theme/js/jquery.min.js"></script>
+<script src="/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="./theme/js/bootstrap.min.js"></script>
+<script src="/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="./theme/js/respond.min.js"></script>
+<script src="/theme/js/respond.min.js"></script>
 
 
 
