--- a/output/example-jupyter-notebook.html
+++ b/output/example-jupyter-notebook.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="/example-jupyter-notebook.html">
+<link rel="canonical" href="./example-jupyter-notebook.html">
 
         <meta name="author" content="Chris Degiere" />
         <meta name="keywords" content="jupyter,pandas" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="Chris Degiere's Data Science Blog" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Example Jupyter Notebook"/>
-        <meta property="og:url" content="/example-jupyter-notebook.html"/>
+        <meta property="og:url" content="./example-jupyter-notebook.html"/>
         <meta property="og:description" content="Pig boudin strip steak shoulder prosciutto brisket. Doner turkey swine jerky. Salami biltong kevin meatloaf. Rump fatback turducken brisket, tri-tip kielbasa chuck drumstick sausage capicola porchetta beef ribs bresaola boudin. Burgdoggen bacon pork chop, chuck sirloin beef ribs brisket filet mignon strip steak ham hock andouille landjaeger fatback. Capicola venison kielbasa sirloin pastrami sausage pancetta fatback."/>
         <meta property="article:published_time" content="2014-01-01" />
             <meta property="article:section" content="Articles" />
@@ -29,14 +29,17 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.flatly.min.css" type="text/css"/>
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="./theme/css/bootstrap.flatly.min.css" type="text/css"/>
+    <link href="./theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/default.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
+    <link href="./theme/css/pygments/default.css" rel="stylesheet">
+    <link rel="stylesheet" href="./theme/css/style.css" type="text/css"/>
 
+        <link href="./feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
+              title="Chris Degiere's Data Science Blog ATOM Feed"/>
 
-
+        <link href="./feeds/articles.atom.xml" type="application/atom+xml" rel="alternate"
+              title="Chris Degiere's Data Science Blog Articles ATOM Feed"/>
 </head>
 <body>
 
@@ -49,19 +52,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">
+            <a href="./" class="navbar-brand">
 Chris Degiere's Data Science Blog            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                         <li><a href="/pages/about.html">
+                         <li><a href="./pages/about.html">
                              About
                           </a></li>
-                         <li><a href="/pages/contact.html">
+                         <li><a href="./pages/contact.html">
                              Contact
                           </a></li>
                         <li class="active">
-                            <a href="/category/articles.html">Articles</a>
+                            <a href="./category/articles.html">Articles</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -82,7 +85,7 @@ Chris Degiere's Data Science Blog            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="/example-jupyter-notebook.html"
+                    <a href="./example-jupyter-notebook.html"
                        rel="bookmark"
                        title="Permalink to Example Jupyter Notebook">
                         Example Jupyter Notebook
@@ -103,9 +106,9 @@ Chris Degiere's Data Science Blog            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="/tag/jupyter.html">jupyter</a>
+	<a href="./tag/jupyter.html">jupyter</a>
         /
-	<a href="/tag/pandas.html">pandas</a>
+	<a href="./tag/pandas.html">pandas</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -1513,25 +1516,25 @@ h6:hover .anchor-link {
 
 <!-- Sidebar/Tag Cloud -->
 <li class="list-group-item">
-  <a href="/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
+  <a href="./"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
   <ul class="list-group " id="tags">
     <li class="list-group-item tag-1">
-      <a href="/tag/data-science.html">data science</a>
+      <a href="./tag/visualization.html">visualization</a>
     </li>
     <li class="list-group-item tag-1">
-      <a href="/tag/visualization.html">visualization</a>
+      <a href="./tag/data-science.html">data science</a>
     </li>
     <li class="list-group-item tag-2">
-      <a href="/tag/matplotlib.html">matplotlib</a>
+      <a href="./tag/matplotlib.html">matplotlib</a>
     </li>
     <li class="list-group-item tag-2">
-      <a href="/tag/cryptocurrency.html">cryptocurrency</a>
+      <a href="./tag/python.html">python</a>
     </li>
     <li class="list-group-item tag-2">
-      <a href="/tag/python.html">python</a>
+      <a href="./tag/cryptocurrency.html">cryptocurrency</a>
     </li>
     <li class="list-group-item tag-4">
-      <a href="/tag/pelican.html">pelican</a>
+      <a href="./tag/pelican.html">pelican</a>
     </li>
   </ul>
 </li>
@@ -1573,13 +1576,13 @@ h6:hover .anchor-link {
       </div>
    </div>
 </footer>
-<script src="/theme/js/jquery.min.js"></script>
+<script src="./theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="./theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/theme/js/respond.min.js"></script>
+<script src="./theme/js/respond.min.js"></script>
 
 
 
