--- a/output/intro-to-python-for-financial-market-data.html
+++ b/output/intro-to-python-for-financial-market-data.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="/intro-to-python-for-financial-market-data.html">
+<link rel="canonical" href="./intro-to-python-for-financial-market-data.html">
 
         <meta name="author" content="Chris Degiere" />
         <meta name="keywords" content="python,data science,visualization" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="Chris Degiere's Data Science Blog" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Intro to Python for Financial Market Data"/>
-        <meta property="og:url" content="/intro-to-python-for-financial-market-data.html"/>
+        <meta property="og:url" content="./intro-to-python-for-financial-market-data.html"/>
         <meta property="og:description" content="Most finance websites show quotes or charts for various financial markets. Where is this data freely available and how can we download it, wrangle it into a useable format, and visualize it ourselves? A quote for a financial instrument like a stock, currency, or commodity is a snapshot in time reflecting the sum of individual trades happening on the market for this instrument. Data points like price or trading volume are collected periodically to form a historical time series. If we chart this time series, we can visualize the activity of individual instruments, or the market as a whole with an index, and gain a quick overview, and perhaps some insights into the data."/>
         <meta property="article:published_time" content="2018-06-26" />
             <meta property="article:section" content="Articles" />
@@ -30,14 +30,17 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.flatly.min.css" type="text/css"/>
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="./theme/css/bootstrap.flatly.min.css" type="text/css"/>
+    <link href="./theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/default.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
+    <link href="./theme/css/pygments/default.css" rel="stylesheet">
+    <link rel="stylesheet" href="./theme/css/style.css" type="text/css"/>
 
+        <link href="./feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
+              title="Chris Degiere's Data Science Blog ATOM Feed"/>
 
-
+        <link href="./feeds/articles.atom.xml" type="application/atom+xml" rel="alternate"
+              title="Chris Degiere's Data Science Blog Articles ATOM Feed"/>
 </head>
 <body>
 
@@ -50,19 +53,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">
+            <a href="./" class="navbar-brand">
 Chris Degiere's Data Science Blog            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                         <li><a href="/pages/about.html">
+                         <li><a href="./pages/about.html">
                              About
                           </a></li>
-                         <li><a href="/pages/contact.html">
+                         <li><a href="./pages/contact.html">
                              Contact
                           </a></li>
                         <li class="active">
-                            <a href="/category/articles.html">Articles</a>
+                            <a href="./category/articles.html">Articles</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -83,7 +86,7 @@ Chris Degiere's Data Science Blog            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="/intro-to-python-for-financial-market-data.html"
+                    <a href="./intro-to-python-for-financial-market-data.html"
                        rel="bookmark"
                        title="Permalink to Intro to Python for Financial Market Data">
                         Intro to Python for Financial Market Data
@@ -104,11 +107,11 @@ Chris Degiere's Data Science Blog            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="/tag/python.html">python</a>
+	<a href="./tag/python.html">python</a>
         /
-	<a href="/tag/data-science.html">data science</a>
+	<a href="./tag/data-science.html">data science</a>
         /
-	<a href="/tag/visualization.html">visualization</a>
+	<a href="./tag/visualization.html">visualization</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -3281,25 +3284,25 @@ RU5ErkJggg==
 
 <!-- Sidebar/Tag Cloud -->
 <li class="list-group-item">
-  <a href="/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
+  <a href="./"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
   <ul class="list-group " id="tags">
     <li class="list-group-item tag-1">
-      <a href="/tag/data-science.html">data science</a>
+      <a href="./tag/visualization.html">visualization</a>
     </li>
     <li class="list-group-item tag-1">
-      <a href="/tag/visualization.html">visualization</a>
+      <a href="./tag/data-science.html">data science</a>
     </li>
     <li class="list-group-item tag-2">
-      <a href="/tag/matplotlib.html">matplotlib</a>
+      <a href="./tag/matplotlib.html">matplotlib</a>
     </li>
     <li class="list-group-item tag-2">
-      <a href="/tag/cryptocurrency.html">cryptocurrency</a>
+      <a href="./tag/python.html">python</a>
     </li>
     <li class="list-group-item tag-2">
-      <a href="/tag/python.html">python</a>
+      <a href="./tag/cryptocurrency.html">cryptocurrency</a>
     </li>
     <li class="list-group-item tag-4">
-      <a href="/tag/pelican.html">pelican</a>
+      <a href="./tag/pelican.html">pelican</a>
     </li>
   </ul>
 </li>
@@ -3341,13 +3344,13 @@ RU5ErkJggg==
       </div>
    </div>
 </footer>
-<script src="/theme/js/jquery.min.js"></script>
+<script src="./theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="./theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/theme/js/respond.min.js"></script>
+<script src="./theme/js/respond.min.js"></script>
 
 
 
