--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="/pages/about.html">
+<link rel="canonical" href="../pages/about.html">
 
         <meta name="author" content="Chris Degiere" />
         <meta name="description" content="Whoami? Internet and financial industry software engineer and data scientist. Interests: AI. Music Technology. Trading. Tomfoolery. TODO: Write more..." />
@@ -17,18 +17,20 @@
     <meta property="og:site_name" content="Chris Degiere's Data Science Blog" />
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="About"/>
-    <meta property="og:url" content="/pages/about.html"/>
+    <meta property="og:url" content="../pages/about.html"/>
     <meta property="og:description" content="Whoami? Internet and financial industry software engineer and data scientist. Interests: AI. Music Technology. Trading. Tomfoolery. TODO: Write more..." />
 
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.flatly.min.css" type="text/css"/>
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="../theme/css/bootstrap.flatly.min.css" type="text/css"/>
+    <link href="../theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/default.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
+    <link href="../theme/css/pygments/default.css" rel="stylesheet">
+    <link rel="stylesheet" href="../theme/css/style.css" type="text/css"/>
 
+        <link href="../feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
+              title="Chris Degiere's Data Science Blog ATOM Feed"/>
 
 
 </head>
@@ -43,19 +45,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">
+            <a href="../" class="navbar-brand">
 Chris Degiere's Data Science Blog            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                         <li class="active"><a href="/pages/about.html">
+                         <li class="active"><a href="../pages/about.html">
                              About
                           </a></li>
-                         <li><a href="/pages/contact.html">
+                         <li><a href="../pages/contact.html">
                              Contact
                           </a></li>
                         <li >
-                            <a href="/category/articles.html">Articles</a>
+                            <a href="../category/articles.html">Articles</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -100,25 +102,25 @@ Chris Degiere's Data Science Blog            </a>
 
 <!-- Sidebar/Tag Cloud -->
 <li class="list-group-item">
-  <a href="/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
+  <a href="../"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
   <ul class="list-group " id="tags">
     <li class="list-group-item tag-1">
-      <a href="/tag/data-science.html">data science</a>
+      <a href="../tag/visualization.html">visualization</a>
     </li>
     <li class="list-group-item tag-1">
-      <a href="/tag/visualization.html">visualization</a>
+      <a href="../tag/data-science.html">data science</a>
     </li>
     <li class="list-group-item tag-2">
-      <a href="/tag/matplotlib.html">matplotlib</a>
+      <a href="../tag/matplotlib.html">matplotlib</a>
     </li>
     <li class="list-group-item tag-2">
-      <a href="/tag/cryptocurrency.html">cryptocurrency</a>
+      <a href="../tag/python.html">python</a>
     </li>
     <li class="list-group-item tag-2">
-      <a href="/tag/python.html">python</a>
+      <a href="../tag/cryptocurrency.html">cryptocurrency</a>
     </li>
     <li class="list-group-item tag-4">
-      <a href="/tag/pelican.html">pelican</a>
+      <a href="../tag/pelican.html">pelican</a>
     </li>
   </ul>
 </li>
@@ -160,13 +162,13 @@ Chris Degiere's Data Science Blog            </a>
       </div>
    </div>
 </footer>
-<script src="/theme/js/jquery.min.js"></script>
+<script src="../theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="../theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/theme/js/respond.min.js"></script>
+<script src="../theme/js/respond.min.js"></script>
 
 
 
